; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/adv748x/extr_adv748x-core.c_adv748x_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/adv748x/extr_adv748x-core.c_adv748x_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.adv748x_state = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @adv748x_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adv748x_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.adv748x_state*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.adv748x_state* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.adv748x_state* %5, %struct.adv748x_state** %3, align 8
  %6 = load %struct.adv748x_state*, %struct.adv748x_state** %3, align 8
  %7 = getelementptr inbounds %struct.adv748x_state, %struct.adv748x_state* %6, i32 0, i32 4
  %8 = call i32 @adv748x_afe_cleanup(i32* %7)
  %9 = load %struct.adv748x_state*, %struct.adv748x_state** %3, align 8
  %10 = getelementptr inbounds %struct.adv748x_state, %struct.adv748x_state* %9, i32 0, i32 3
  %11 = call i32 @adv748x_hdmi_cleanup(i32* %10)
  %12 = load %struct.adv748x_state*, %struct.adv748x_state** %3, align 8
  %13 = getelementptr inbounds %struct.adv748x_state, %struct.adv748x_state* %12, i32 0, i32 2
  %14 = call i32 @adv748x_csi2_cleanup(i32* %13)
  %15 = load %struct.adv748x_state*, %struct.adv748x_state** %3, align 8
  %16 = getelementptr inbounds %struct.adv748x_state, %struct.adv748x_state* %15, i32 0, i32 1
  %17 = call i32 @adv748x_csi2_cleanup(i32* %16)
  %18 = load %struct.adv748x_state*, %struct.adv748x_state** %3, align 8
  %19 = call i32 @adv748x_unregister_clients(%struct.adv748x_state* %18)
  %20 = load %struct.adv748x_state*, %struct.adv748x_state** %3, align 8
  %21 = call i32 @adv748x_dt_cleanup(%struct.adv748x_state* %20)
  %22 = load %struct.adv748x_state*, %struct.adv748x_state** %3, align 8
  %23 = getelementptr inbounds %struct.adv748x_state, %struct.adv748x_state* %22, i32 0, i32 0
  %24 = call i32 @mutex_destroy(i32* %23)
  ret i32 0
}

declare dso_local %struct.adv748x_state* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @adv748x_afe_cleanup(i32*) #1

declare dso_local i32 @adv748x_hdmi_cleanup(i32*) #1

declare dso_local i32 @adv748x_csi2_cleanup(i32*) #1

declare dso_local i32 @adv748x_unregister_clients(%struct.adv748x_state*) #1

declare dso_local i32 @adv748x_dt_cleanup(%struct.adv748x_state*) #1

declare dso_local i32 @mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
